Adding Tailwind 4 styling to the account pages

--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Assets/css/app.css
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Assets/css/app.css
@@ -1,5 +1,3 @@
 @import "../../../../Shared/MarkBartha.HarvestDemo.Assets/Assets/css/common.css";
 
-body {
-    background: red;
-}
+@source "../../Views/**/*.cshtml";
