--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormRegisterUser.cshtml
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormRegisterUser.cshtml
@@ -1,8 +1,9 @@
-﻿<li class="py-1">
+<span class="text-sm">
+    @T["Don't have an account?"]
     <a asp-controller="Registration"
        asp-action="Register"
        asp-route-returnurl="@ViewData["ReturnUrl"]"
-       class="text-sm text-primary-600 hover:underline hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300 transition">
-        @T["Register as a new user"]
+       class="font-medium text-brand hover:underline">
+        @T["Sign up"]
     </a>
-</li>
+</span>
