--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormForgotPassword.cshtml
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormForgotPassword.cshtml
@@ -1,7 +1,5 @@
-﻿<li class="py-1">
-    <a asp-controller="ResetPassword"
-       asp-action="ForgotPassword"
-       class="text-sm text-primary-600 hover:underline hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300 transition">
-        @T["Forgot your password?"]
-    </a>
-</li>
+<a asp-controller="ResetPassword"
+   asp-action="ForgotPassword"
+   class="text-sm font-medium text-brand hover:underline">
+    @T["Forgot password?"]
+</a>
