--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormCredentials.cshtml
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/LoginFormCredentials.cshtml
@@ -31,7 +31,7 @@
                     tabindex="-1"
                     id="togglePassword"
                     class="btn-icon absolute inset-y-0 right-2 text-gray-500 hover:text-gray-700">
-                <i data-lucide="eye"></i>
+                <i data-lucide="eye" class="h-4 w-4" aria-hidden="true"></i>
             </button>
         </div>
         <span asp-validation-for="Password" class="text-sm text-red-500 mt-1 block"></span>
