--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MainPage.xaml
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MainPage.xaml
@@ -2,12 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MarkBartha.HarvestDemo.App.Maui"
-             xmlns:components="clr-namespace:MarkBartha.HarvestDemo.App.Maui.Components"
              x:Class="MarkBartha.HarvestDemo.App.Maui.MainPage">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type components:Routes}" />
+            <RootComponent Selector="#app" ComponentType="{x:Type local:Blazor.App}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
