Removing SolutionDir from the MsBuild pipeline

--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/App.Razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/App.Razor
@@ -28,7 +28,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var loggedIn = await AuthStateProvider.TrySilentLoginAsync();
+        // var loggedIn = await AuthStateProvider.TrySilentLoginAsync();
 
         // if (loggedIn)
         // {
