--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/RegisterUserFormIdentifier.cshtml
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/Views/RegisterUserFormIdentifier.cshtml
@@ -41,8 +41,8 @@
                     data-password-toggle="#@Html.IdFor(m => m.Password)"
                     data-show-label='@T["Show password"]'
                     data-hide-label='@T["Hide password"]'>
-                <i data-lucide="eye" class="h-4 w-4" aria-hidden="true" data-password-icon="show"></i>
-                <i data-lucide="eye-off" class="h-4 w-4 hidden" aria-hidden="true" data-password-icon="hide"></i>
+                <i class="icon-eye h-4 w-4" aria-hidden="true" data-password-icon="show"></i>
+                <i class="icon-eye-off h-4 w-4 hidden" aria-hidden="true" data-password-icon="hide"></i>
                 <span class="sr-only">@T["Show password"]</span>
             </button>
         </div>
@@ -64,8 +64,8 @@
                     data-password-toggle="#@Html.IdFor(m => m.ConfirmPassword)"
                     data-show-label='@T["Show password"]'
                     data-hide-label='@T["Hide password"]'>
-                <i data-lucide="eye" class="h-4 w-4" aria-hidden="true" data-password-icon="show"></i>
-                <i data-lucide="eye-off" class="h-4 w-4 hidden" aria-hidden="true" data-password-icon="hide"></i>
+                <i class="icon-eye h-4 w-4" aria-hidden="true" data-password-icon="show"></i>
+                <i class="icon-eye-off h-4 w-4 hidden" aria-hidden="true" data-password-icon="hide"></i>
                 <span class="sr-only">@T["Show password"]</span>
             </button>
         </div>
