--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/App.Razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/App.Razor
@@ -1,4 +1,4 @@
-﻿@if (!_initialized)
+@if (!_initialized)
 {
     <div class="min-h-screen flex flex-col items-center justify-center bg-white dark:bg-gray-900 gap-2">
         <i class="icon-loader animate-spin text-primary-600 dark:text-primary-400 text-2xl"></i>
